--- a/pom.xml
+++ b/pom.xml
@@ -102,14 +102,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.1</version>
-				<configuration>
-					<includes>
-						<include>com.revature.planetarium.IntegrationTestSuite</include>
-						<include>com.revature.planetarium.UnitTestSuite</include>
-						<include>com.revature.planetarium.APITestSuite</include>
-						<include>com.revature.planetarium.E2ETestRunner</include>
-					</includes>
-				</configuration>
+<!--				<configuration>-->
+<!--&lt;!&ndash;					<includes>&ndash;&gt;-->
+<!--&lt;!&ndash;						<include>com.revature.planetarium.IntegrationTestSuite</include>&ndash;&gt;-->
+<!--&lt;!&ndash;						<include>com.revature.planetarium.UnitTestSuite</include>&ndash;&gt;-->
+<!--&lt;!&ndash;						<include>com.revature.planetarium.APITestSuite</include>&ndash;&gt;-->
+<!--&lt;!&ndash;						<include>com.revature.planetarium.E2ETestRunner</include>&ndash;&gt;-->
+<!--&lt;!&ndash;					</includes>&ndash;&gt;-->
+<!--				</configuration>-->
 			</plugin>
 		</plugins>
 	</build>
